# phantasma

./: .gitignore  Cargo.toml  README.md  SECURITY.md
client/: Cargo.toml
client/src/: contacts.rs  crypto.rs  identity.rs  main.rs  server_api.rs
deploy/: Caddyfile.example  oracle-cloud.md  phantasma.service.example
docs/: app.js  index.html  styles.css
server/: Cargo.toml
server/src/: directory.rs  main.rs
shared/: Cargo.toml
shared/src/: lib.rs
