[package]
name = "client"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
chacha20poly1305 = "0.10"
ed25519-dalek = { version = "2.2", features = ["rand_core"] }
futures-util = { workspace = true }
hkdf = { workspace = true }
rand_core = { version = "0.6", features = ["getrandom"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
shared = { path = "../shared" }
tokio = { workspace = true }
tokio-tungstenite = "0.29"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }

[dev-dependencies]
tempfile = "3"
