[package]
name = "server"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
axum = { version = "0.8", features = ["ws"] }
futures-util = { workspace = true }
shared = { path = "../shared" }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite"] }
tokio = { workspace = true }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
